--- a/index.html
+++ b/index.html
@@ -11,20 +11,13 @@
     <script src="https://app.termly.io/resource-blocker/acc0f1f0-9746-4ec5-a629-1def23043b13?autoBlock=on"></script>
     <a href="#" class="termly-display-preferences">Consent Preferences</a>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-LRMNQBEFVD"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-86DQ5HTDV9"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
-
-    gtag('consent', 'default', {
-        'ad_storage': 'denied',
-        'analytics_storage': 'denied',
-        'personalization_storage': 'denied',
-        'functionality_storage': 'granted', // essential cookies still work
-        'security_storage': 'granted'
-    });
-
     gtag('js', new Date());
-    gtag('config', 'G-LRMNQBEFVD');
+
+    gtag('config', 'G-86DQ5HTDV9');
     </script>
 
     <script src="./assets/js/pdf.min.js"></script>
